@@ -1,3 +1,15 @@
+2005-03-20  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/about.c:
+	* src/cmd_completion.c:
+	* src/command_line.c:
+	* src/exec.c:
+	* src/history.c:
+	* src/macro.c:
+	* src/mc-install-default-macros.c:
+	* src/mini-commander_applet.c:
+	* src/preferences.c: Cleanup and don't use deprecated headers.
+
 2005-03-07  Davyd Madeley  <davyd@madeley.id.au>
 
 	* docs/C/figures/*.png: Some new images.
